# devue

./: .gitignore  .gitmodules  CMakeLists.txt  CMakeSettings.json  README.md
dependencies/: CMakeLists.txt
plugins/: CMakeLists.txt
plugins/devue_official/: CMakeLists.txt
plugins/devue_official/core/: CMakeLists.txt  devue_plugin.cpp  devue_plugin.hpp  devue_plugin_base.cpp  devue_plugin_base.hpp
plugins/devue_official/impl/: CMakeLists.txt  devue_plugin_impl.cpp  devue_plugin_impl.hpp
plugins/devue_official/plugin/: CMakeLists.txt  devue_plugin.cpp  devue_plugin.hpp
plugins/devue_official/plugin/resources/: plugin.rc
plugins/devue_plugins/: CMakeLists.txt
plugins/devue_plugins/adapters/: CMakeLists.txt  dv_model_plugin_adapter.cpp  dv_model_plugin_adapter.hpp  dv_plugin_adapter.cpp  dv_plugin_adapter.hpp  dv_texture_plugin_adapter.cpp  dv_texture_plugin_adapter.hpp
plugins/devue_plugins/plugins/: CMakeLists.txt
plugins/devue_plugins/plugins/model/: CMakeLists.txt  dv_model_plugin.cpp  dv_model_plugin.hpp
plugins/devue_plugins/plugins/texture/: CMakeLists.txt  dv_texture_plugin.cpp  dv_texture_plugin.hpp
plugins/lib/assimp/: CMakeLists.txt
plugins/lib/assimp/code/: CMakeLists.txt
source/devue_app/: CMakeLists.txt
source/devue_app/resources/: app.rc
source/devue_app/src/: devue_app.cpp  devue_app.hpp  dv_app.cpp  dv_app.hpp  dv_theme.cpp  dv_theme.hpp
source/devue_app/src/gui/: dv_components.hpp
source/devue_app/src/gui/base/: dv_comp.hpp
source/devue_app/src/gui/components/: dv_comp_assets.cpp  dv_comp_assets.hpp  dv_comp_console.cpp  dv_comp_console.hpp  dv_comp_dockspace.cpp  dv_comp_dockspace.hpp  dv_comp_hierarchy.cpp  dv_comp_hierarchy.hpp  dv_comp_meshes.cpp  dv_comp_meshes.hpp  dv_comp_properties.cpp  dv_comp_properties.hpp  dv_comp_scene.cpp  dv_comp_scene.hpp  dv_comp_texture.cpp  dv_comp_texture.hpp
source/devue_app/src/gui/modals/: dv_modal_about.cpp  dv_modal_about.hpp  dv_modal_import.cpp  dv_modal_import.hpp  dv_modal_plugins.cpp  dv_modal_plugins.hpp
source/devue_app/src/systems/: dv_sys_command.cpp  dv_sys_command.hpp  dv_sys_properties.cpp  dv_sys_properties.hpp  dv_systems.cpp  dv_systems.hpp
source/devue_app/src/utilities/: dv_util_imgui.cpp  dv_util_imgui.hpp
source/devue_core/: CMakeLists.txt
source/devue_core/resources/shaders/: default.vert
source/devue_core/src/exceptions/: dv_exception.hpp
source/devue_core/src/models/pdo/: dv_mesh.hpp  dv_model.hpp
source/devue_core/src/plugins/: dv_plugin.hpp
source/devue_core/src/rendering/: dv_multisample_frame_buffer.cpp  dv_shader.cpp  dv_shader.hpp
source/devue_core/src/scene/: dv_camera.cpp  dv_camera.hpp  dv_scene.hpp  dv_scene_grid.cpp
source/devue_core/src/scene/lighting/: dv_ambient_light.hpp  dv_light.hpp  dv_lighting.hpp
source/devue_core/src/scene/model/: dv_scene_material.hpp  dv_scene_mesh.hpp  dv_scene_model.hpp
source/devue_core/src/systems/: dv_sys_material.cpp  dv_sys_material.hpp  dv_sys_model.cpp  dv_sys_model.hpp  dv_sys_plugin.cpp  dv_sys_plugin.hpp  dv_sys_rendering.cpp  dv_sys_rendering.hpp  dv_sys_scene.cpp  dv_sys_scene.hpp  dv_sys_shader.cpp  dv_sys_shader.hpp  dv_sys_texture.cpp  dv_sys_texture.hpp  dv_systems_bundle.cpp  dv_systems_bundle.hpp
source/devue_core/src/utilities/: dv_util_diag.cpp
src/devue/devue_app/: CMakeLists.txt
src/devue/devue_app/src/: devue_app.cpp  dv_window.cpp
src/devue/devue_app/src/gui/: dv_gui.cpp  dv_gui.hpp
src/devue/devue_app/src/systems/: dv_systems.cpp
src/devue/devue_app/src/utilities/: dv_util_dialog.cpp
src/devue/devue_core/: CMakeLists.txt
src/devue/devue_core/src/graphics/: dv_opengl_window.cpp  dv_window.cpp
src/devue/devue_core/src/importers/: dv_file_type.cpp
src/devue/devue_core/src/scene/: dv_camera.cpp  dv_scene.cpp
src/devue/devue_core/src/systems/: dv_sys_model.cpp  dv_sys_rendering.cpp  dv_sys_scene.cpp  dv_sys_texture.cpp  dv_systems_bundle.cpp
src/devue/devue_gui/: CMakeLists.txt
src/devue/devue_gui/src/: dv_gui.cpp
src/devue_app/: CMakeLists.txt
src/devue_app/resources/: app.rc
src/devue_app/src/: devue_app.cpp  dv_app.cpp  dv_app.hpp
src/devue_app/src/gui/: dv_components.cpp  dv_components.hpp  dv_gui.cpp  dv_gui.hpp
src/devue_app/src/gui/base/: dv_comp.cpp  dv_comp.hpp  dv_selected.cpp  dv_selected.hpp
src/devue_app/src/gui/components/: dv_comp_assets.cpp  dv_comp_assets.hpp  dv_comp_console.cpp  dv_comp_console.hpp  dv_comp_dockspace.cpp  dv_comp_dockspace.hpp  dv_comp_hierarchy.cpp  dv_comp_hierarchy.hpp  dv_comp_meshes.cpp  dv_comp_meshes.hpp  dv_comp_properties.cpp  dv_comp_properties.hpp  dv_comp_scene.cpp  dv_comp_scene.hpp  dv_comp_texture.cpp  dv_comp_texture.hpp  dv_components.cpp  dv_components.hpp
src/devue_app/src/gui/fonts/: font_fontawesome_solid.hpp  font_roboto.hpp
src/devue_app/src/gui/modals/: dv_modal_about.cpp  dv_modal_about.hpp  dv_modal_import.cpp  dv_modal_import.hpp  dv_modal_plugins.cpp  (+1 more)
src/devue_app/src/systems/: dv_sys_command.cpp  dv_sys_command.hpp  dv_sys_properties.cpp  dv_sys_properties.hpp  dv_systems.cpp  dv_systems.hpp
src/devue_app/src/utilities/: dv_util_command.cpp  dv_util_command.hpp  dv_util_dialog.cpp  dv_util_dialog.hpp  dv_util_imgui.cpp  dv_util_imgui.hpp
src/devue_core/: CMakeLists.txt
src/devue_core/src/graphics/: dv_opengl_window.cpp
src/devue_core/src/importers/: dv_file_type.cpp
src/devue_core/src/misc/: dv_file_filter.cpp
src/devue_core/src/plugins/: dv_model.plugin.cpp  dv_plugin.cpp  dv_texture_plugin.cpp
src/devue_core/src/rendering/: dv_multisample_frame_buffer.cpp  dv_render_target.cpp  dv_shader.cpp
src/devue_core/src/scene/: dv_camera.cpp  dv_camera.hpp  dv_scene.hpp  dv_scene_grid.cpp
src/devue_core/src/systems/: dv_sys_material.cpp  dv_sys_material.hpp  dv_sys_model.cpp  dv_sys_plugin.cpp  dv_sys_rendering.cpp  dv_sys_scene.cpp  dv_sys_texture.cpp  dv_sys_texture.hpp  dv_systems_bundle.cpp
src/devue_core/src/utilities/: dv_util_diag.cpp  dv_util_uuid.cpp
src/lib/glfw/: CMakeLists.txt
src/lib/imgui/: CMakeLists.txt
src/lib/imgui/src/: imgui_widgets.cpp
(+126 files in other folders)
