CMAKE_MINIMUM_REQUIRED (VERSION 3.10)

SET(PLUGINS_LIB_DIR		"${CMAKE_SOURCE_DIR}/plugins/lib")
SET(PLUGINS_INCLUDE_DIR "${CMAKE_SOURCE_DIR}/lib/devue_plugin/include")

IF(WIN32)
	SET(OUTPUT_DIR_LOWER "${OUTPUT_DIR_LOWER}/plugins")

	SET(CMAKE_RUNTIME_OUTPUT_DIRECTORY "${CMAKE_SOURCE_DIR}/${OUTPUT_DIR_LOWER}")
    SET(CMAKE_LIBRARY_OUTPUT_DIRECTORY "${CMAKE_SOURCE_DIR}/${OUTPUT_DIR_LOWER}")
    SET(CMAKE_ARCHIVE_OUTPUT_DIRECTORY "${CMAKE_SOURCE_DIR}/${OUTPUT_DIR_LOWER}")

    IF(("${CMAKE_SIZEOF_VOID_P}" STREQUAL "8"))
        IF (CMAKE_CXX_COMPILER_ID STREQUAL "MSVC")
            SET(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} /we4297")
        ENDIF()
    ENDIF()

    # CONFIGURE ASSIMP
    SET(BUILD_SHARED_LIBS	OFF)
    SET(USE_STATIC_CRT		ON)
    SET(ASSIMP_BUILD_TESTS	OFF)
    SET(ASSIMP_INSTALL		OFF)
    SET(ASSIMP_NO_EXPORT	ON)

    SET(ASSIMP_BUILD_ALL_IMPORTERS_BY_DEFAULT FALSE)
    SET(ASSIMP_BUILD_OBJ_IMPORTER ON)

    ADD_SUBDIRECTORY("lib/assimp")
    ADD_SUBDIRECTORY("devue_official")
ENDIF()