CMAKE_MINIMUM_REQUIRED (VERSION 3.10)

SET(PLUGINS_LIB_DIR		"${CMAKE_SOURCE_DIR}/plugins/lib")
SET(PLUGINS_INCLUDE_DIR "${CMAKE_SOURCE_DIR}/lib/devue_plugin/include")
SET(PLUGINS_SOURCE_DIR  "${CMAKE_SOURCE_DIR}/plugins/devue_official")

IF(WIN32)
	SET(OUTPUT_DIR_LOWER "${OUTPUT_DIR_LOWER}/plugins")

	SET(CMAKE_RUNTIME_OUTPUT_DIRECTORY "${CMAKE_SOURCE_DIR}/${OUTPUT_DIR_LOWER}")
    SET(CMAKE_LIBRARY_OUTPUT_DIRECTORY "${CMAKE_SOURCE_DIR}/${OUTPUT_DIR_LOWER}")
    SET(CMAKE_ARCHIVE_OUTPUT_DIRECTORY "${CMAKE_SOURCE_DIR}/${OUTPUT_DIR_LOWER}")

    IF(("${CMAKE_SIZEOF_VOID_P}" STREQUAL "8"))
        IF (CMAKE_CXX_COMPILER_ID STREQUAL "MSVC")
            SET(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} /we4297")
        ENDIF()
    ENDIF()

    ADD_SUBDIRECTORY("devue_official")

	# SET FILENAME
	SET_TARGET_PROPERTIES(devue_plugin_core PROPERTIES OUTPUT_NAME "dv_plg_devue_official")
ENDIF()
