SET(DEVUE_APP_RESOURCES 
    "${CMAKE_CURRENT_SOURCE_DIR}/resources/app.rc"
)

FILE(GLOB_RECURSE DEVUE_APP_HEADERS CONFIGURE_DEPENDS 
    "src/*.hpp"
)

FILE(GLOB_RECURSE DEVUE_APP_BUILD_FILES CONFIGURE_DEPENDS 
    "src/*.cpp"
)

ADD_EXECUTABLE(devue 
    ${DEVUE_PLUGIN_CORE_HEADERS}
    ${DEVUE_APP_RESOURCES}
    ${DEVUE_APP_HEADERS}
    ${DEVUE_APP_BUILD_FILES}
)

TARGET_INCLUDE_DIRECTORIES(devue PRIVATE "${CMAKE_CURRENT_SOURCE_DIR}/src")

TARGET_LINK_OPTIONS(devue PRIVATE "/SUBSYSTEM:WINDOWS")

TARGET_LINK_LIBRARIES(devue devue_core)
TARGET_LINK_LIBRARIES(devue comctl32.lib)
TARGET_LINK_LIBRARIES(devue propsys.lib)
TARGET_LINK_LIBRARIES(devue shlwapi.lib)