SET(DEVUE_CORE_RESOURCES_DIR "${CMAKE_CURRENT_SOURCE_DIR}/resources")

FILE(GLOB_RECURSE DEVUE_CORE_HEADERS CONFIGURE_DEPENDS 
    "src/*.hpp"
)

FILE(GLOB_RECURSE DEVUE_CORE_BUILD_FILES CONFIGURE_DEPENDS 
    "src/*.cpp"
)

ADD_LIBRARY(devue_core STATIC
    ${DEVUE_PLUGIN_CORE_HEADERS}
    ${DEVUE_CORE_HEADERS}
    ${DEVUE_CORE_BUILD_FILES}
)

cmrc_add_resource_library(resources
    "${DEVUE_CORE_RESOURCES_DIR}/shaders/default.vert"
    "${DEVUE_CORE_RESOURCES_DIR}/shaders/default.frag"
    "${DEVUE_CORE_RESOURCES_DIR}/shaders/grid.vert"
    "${DEVUE_CORE_RESOURCES_DIR}/shaders/grid.frag"
)

TARGET_INCLUDE_DIRECTORIES(devue_core PUBLIC "${CMAKE_CURRENT_SOURCE_DIR}/src")
TARGET_INCLUDE_DIRECTORIES(devue_core PUBLIC "${DEVUE_PLUGIN_CORE_INCLUDES}")
TARGET_INCLUDE_DIRECTORIES(devue_core PUBLIC "${DEVUE_LIBRARIES_DIR}")
TARGET_INCLUDE_DIRECTORIES(devue_core PUBLIC "${DEVUE_LIBRARIES_DIR}/glm/include")

TARGET_LINK_LIBRARIES(devue_core PUBLIC libgui_opengl3)
TARGET_LINK_LIBRARIES(devue_core PUBLIC resources)
