FILE(GLOB_RECURSE DEVUE_CORE_HEADERS CONFIGURE_DEPENDS 
    "${DEVUE_INCLUDE_DIR}/devue_core/*.hpp"
)

FILE(GLOB_RECURSE DEVUE_CORE_BUILD_FILES CONFIGURE_DEPENDS 
    "src/*.cpp"
)

FILE(GLOB_RECURSE DEVUE_PLUGINS_HEADERS CONFIGURE_DEPENDS 
    "${CMAKE_SOURCE_DIR}/lib/devue_plugins/*.hpp"
)

ADD_LIBRARY(devue_core STATIC
    ${DEVUE_PLUGINS_HEADERS}
    ${DEVUE_CORE_HEADERS}
    ${DEVUE_CORE_BUILD_FILES}
)

# COPY RESOURCES TO OUTPUT DIR

SET(RESOURCES_SRC_DIR "${CMAKE_SOURCE_DIR}/resources")
SET(RESOURCES_DST_DIR "${CMAKE_RUNTIME_OUTPUT_DIRECTORY}/resources")

ADD_CUSTOM_TARGET(copy_resources ALL
    COMMAND robocopy ${RESOURCES_SRC_DIR} ${RESOURCES_DST_DIR} /MIR /NP > NUL 2>&1 || exit 0
)

ADD_DEPENDENCIES(copy_resources devue_core)

TARGET_INCLUDE_DIRECTORIES(devue_core PUBLIC  "${DV_GUI_INCLUDES}")
TARGET_INCLUDE_DIRECTORIES(devue_core PUBLIC  "${DEVUE_PLUGIN_CORE_INCLUDES}")
TARGET_INCLUDE_DIRECTORIES(devue_core PUBLIC  "${DEVUE_LIB_DIR}/glm/include")
TARGET_INCLUDE_DIRECTORIES(devue_core PRIVATE "${DEVUE_LIB_DIR}")
TARGET_INCLUDE_DIRECTORIES(devue_core PUBLIC  "${DEVUE_INCLUDE_DIR}/devue_core")

TARGET_LINK_LIBRARIES(devue_core PUBLIC dv_gui_opengl3)