CMAKE_MINIMUM_REQUIRED (VERSION 3.8)

FILE(GLOB_RECURSE INCLUDES CONFIGURE_DEPENDS 
	"${CMAKE_SOURCE_DIR}/include/*.hpp"
)

SET(PLUGIN_RC "${PLUGINS_SOURCE_DIR}/resources/plugin.rc")

ADD_LIBRARY(devue_plugin_core SHARED
	${INCLUDES}
	${PLUGIN_RC}
	"devue_plugin_base.cpp"
	"devue_plugin.cpp"
)

TARGET_LINK_LIBRARIES(devue_plugin_core devue_plugin_impl)

TARGET_INCLUDE_DIRECTORIES(devue_plugin_core PRIVATE "${PLUGINS_LIB_DIR}")
TARGET_INCLUDE_DIRECTORIES(devue_plugin_core PRIVATE "${DEVUE_LIB_DIR}/glm/include")
TARGET_INCLUDE_DIRECTORIES(devue_plugin_core PRIVATE "${DEVUE_LIB_DIR}/json/include")
TARGET_INCLUDE_DIRECTORIES(devue_plugin_core PRIVATE "${PLUGINS_INCLUDE_DIR}")
TARGET_INCLUDE_DIRECTORIES(devue_plugin_core PRIVATE "${PLUGINS_SOURCE_DIR}/impl")