CMAKE_MINIMUM_REQUIRED (VERSION 3.8)

FILE(GLOB_RECURSE INCLUDES CONFIGURE_DEPENDS 
	"${CMAKE_SOURCE_DIR}/include/*.hpp"
)

ADD_LIBRARY(devue_plugin_impl STATIC
	${INCLUDES}
	"devue_plugin_impl.cpp"
)

TARGET_INCLUDE_DIRECTORIES(devue_plugin_impl PRIVATE "${PLUGINS_LIB_DIR}")
TARGET_INCLUDE_DIRECTORIES(devue_plugin_impl PRIVATE "${DEVUE_LIB_DIR}/glm/include")
TARGET_INCLUDE_DIRECTORIES(devue_plugin_impl PRIVATE "${PLUGINS_INCLUDE_DIR}")
TARGET_INCLUDE_DIRECTORIES(devue_plugin_impl PRIVATE "${PLUGINS_SOURCE_DIR}/core")