CMAKE_MINIMUM_REQUIRED (VERSION 3.8)

INCLUDE_DIRECTORIES("${CMAKE_SOURCE_DIR}/plugins/devue_plugins/adapters")
LINK_LIBRARIES(dv_plg_tex_adapter)

FILE(GLOB_RECURSE TEXTURE_PLUGINS "${CMAKE_CURRENT_SOURCE_DIR}/texture/*.txt")

FOREACH(CMAKE_FILE ${TEXTURE_PLUGINS})
    GET_FILENAME_COMPONENT(DIR ${CMAKE_FILE} DIRECTORY)
    ADD_SUBDIRECTORY(${DIR})
ENDFOREACH()

FILE(GLOB_RECURSE MODEL_PLUGINS "${CMAKE_CURRENT_SOURCE_DIR}/model/*.txt")

FOREACH(CMAKE_FILE ${MODEL_PLUGINS})
    GET_FILENAME_COMPONENT(DIR ${CMAKE_FILE} DIRECTORY)
    ADD_SUBDIRECTORY(${DIR})
ENDFOREACH()
