CMAKE_MINIMUM_REQUIRED (VERSION 3.8)

ADD_LIBRARY(devue_gui STATIC
	"src/dv_gui.cpp"
)

TARGET_INCLUDE_DIRECTORIES(devue_gui PRIVATE "${CMAKE_SOURCE_DIR}/lib/imgui/include")
TARGET_INCLUDE_DIRECTORIES(devue_gui PRIVATE "${CMAKE_SOURCE_DIR}/lib/glad/include")
TARGET_INCLUDE_DIRECTORIES(devue_gui PRIVATE "${CMAKE_SOURCE_DIR}/lib/khr/include")
TARGET_INCLUDE_DIRECTORIES(devue_gui PRIVATE "${CMAKE_SOURCE_DIR}/lib/glfw/include")

TARGET_INCLUDE_DIRECTORIES(devue_gui PRIVATE "${CMAKE_SOURCE_DIR}/include/devue/devue_gui")
TARGET_INCLUDE_DIRECTORIES(devue_gui PRIVATE "${CMAKE_SOURCE_DIR}/include/devue/devue_common")
TARGET_INCLUDE_DIRECTORIES(devue_gui PRIVATE "${CMAKE_SOURCE_DIR}/include/devue_shared")